--- a/test/utils/data/capi-server-v1-invalid-capitemplate.yaml
+++ b/test/utils/data/capi-server-v1-invalid-capitemplate.yaml
@@ -2,6 +2,7 @@ apiVersion: capi.weave.works/v1alpha1
 kind: CAPITemplate
 metadata:
   name: cluster-invalid-template-{{.Count}}
+  namespace: default
 spec:
   resourcetemplates:
     - apiVersion: cluster.x-k8s.io/v1alpha3
