Added skip tag for backend integration tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1357,7 +1357,7 @@ jobs:
 
             make ui-build-for-tests
             cd test/integration/test
-            go test -ginkgo.v -v -run TestMccpUI --timeout=99999s
+            go test -ginkgo.v -v -run TestMccpUI -ginkgo.skip=@Integration --timeout=99999s
       - store_artifacts:
           path: /tmp/workspace/test
       - store_test_results:
