[WKP-2136] Create endpoint that returns the Kubeconfig for a workload cluster (#1967)
* Create endpoint that returns the Kubeconfig for a workload cluster

* Fail if clusters namespace is empty

* Add basic content negotiation for Kubeconfig endpoint

--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -35,7 +35,10 @@ config:
     type: github
     hostname: github.com
   capi:
-    namespace: default
+    templates:
+      namespace: default
+    clusters:
+      namespace: default
     repositoryURL: ''
     baseBranch: main
 
