--- a/charts/mccp/templates/clusters-service/configmap.yaml
+++ b/charts/mccp/templates/clusters-service/configmap.yaml
@@ -6,6 +6,7 @@ metadata:
 data:
   GIT_PROVIDER_TYPE: {{ .Values.config.git.type }}
   GIT_PROVIDER_HOSTNAME: {{ .Values.config.git.hostname }}
-  CAPI_TEMPLATES_NAMESPACE: {{ .Values.config.capi.namespace }}
+  CAPI_CLUSTERS_NAMESPACE: {{ .Values.config.capi.clusters.namespace }}
+  CAPI_TEMPLATES_NAMESPACE: {{ .Values.config.capi.templates.namespace }}
   CAPI_TEMPLATES_REPOSITORY_URL: {{ .Values.config.capi.repositoryURL | quote }}
   CAPI_TEMPLATES_REPOSITORY_BASE_BRANCH: {{ .Values.config.capi.baseBranch | quote }}
