Small delete cluster fixes (#1977)
* Pass req body through DELETE /v1/clusters route

* Adds test for deleting files in a PR

* Remove git clone code when deleting a cluster

- Assume cluster file paths exist

* Bring back delete test

--- a/cmd/capi-server/buf.gen.yaml
+++ b/cmd/capi-server/buf.gen.yaml
@@ -8,8 +8,9 @@ plugins:
     opt: paths=source_relative
   - name: grpc-gateway
     out: pkg/protos
-    opt: paths=source_relative
+    opt: paths=source_relative,allow_delete_body=true
   - name: openapiv2
     out: api
+    opt: allow_delete_body=true
   - name: grpc-gateway-ts
     out: ../../ui-cra/src/capi-server
