WKP2154/2157/2207 Kubeconfig / Delete / Fix infra cred dropdown / Notifications (#1975)
* Update page layout to match designs

* Loader Component

* Update page layout to match designs - round 2

* Move nav active border to the left for the steps

* Implement addcluster endpoint call - not tested

* [WKP-2150] Add Cluster creates a PR

* cleanup

* Update style gitops section

* Add back classes to the Card

* [WKP-2176] Form fields grouping - WIP

* [WKP-2176] Form fields grouping - groups on screen

* [WKP-2176] Form fields grouping - groups on screen - updated (needs styling and validation)

* [WKP-2176] Form fields - style update

* Partial cleanup and removal of @ts-nocheck from form files

* Adding types - WIP

* [WKP-2176] Use types from rjsf/core which uses JSONSchema7

* [WKP-2176] Use types from rjsf/core which uses JSONSchema7 - Updated & Updated logos

* [WKP-2176] Create local mui theme to style form fields

* css adjustments

* css adjustments - updated

* [WKP-2176] Redo steps - WIP

* [WKP-2176] Redo steps - WIP2

* [WKP-2176] Clicking on the table of contents scrolls down to form group

* cleanup

* [WKP-2176] Table of contents - sticky & hidden on small devices

* [WKP-2176] Table of contents - sticky & hidden on small devices - updated

* [WKP-2188] Validate form - WIP

* [WKP-2188] Implement API interaction Errors - WIP

* [WKP-2198] Add options dropdown in UI - WIP

* Refresh templates when history changes

* Keep formdata on screen when user uses table on contents

* [WKP-2188] Move help link to content

* [WKP-2188] Move errors to footer

* [WKP-2198] Styling options dropdown

* [WKP-2148] Implement credentials context and component - partially

* [WKP-2148] Send credentials when reviewing and creating PR

* [WKP-2148] Implement credentials context and component - partially

* [WKP-2148] Send credentials when reviewing and creating PR

* CAPA identity roles

* POST t

--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -31,6 +31,7 @@
     "d3-scale": "3.2.1",
     "git-url-parse": "11.1.2",
     "http-proxy-middleware": "^2.0.0",
+    "js-file-download": "^0.4.12",
     "json-schema": "^0.3.0",
     "lodash": "^4.17.21",
     "moment": "2.25.3",
