--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -41,6 +41,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jsonschema-form": "^1.8.1",
+    "react-lottie-player": "^1.3.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-use": "^17.1.1",
