--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -892,7 +892,7 @@ jobs:
             kubectl port-forward -n mccp svc/my-mccp-nginx-ingress-controller 8090:80 &
             cd ../../acceptance/test/
             export ACCEPTANCE_TESTS_DATABASE_TYPE=sqlite
-            go test -ginkgo.v -v --timeout=99999s
+            go test -ginkgo.skip=@VM -ginkgo.v -v --timeout=99999s
             
             if [ ${RUN_MCCP_SUITE_WITH_POSTGRES} == "true" ]; then
               # Deploy postgres
@@ -933,7 +933,7 @@ jobs:
               # Run acceptance-tests again with postgres
               cd $CIRCLE_WORKING_DIRECTORY/test/acceptance/test
               ACCEPTANCE_TESTS_DATABASE_TYPE=postgres
-              go test -v --timeout=99999s
+              go test -ginkgo.skip=@VM -v --timeout=99999s
             fi
 
             # Delete the repo backing one of the kind clusters
