--- a/test/utils/scripts/local-mccp-kind-config.yaml
+++ b/test/utils/scripts/local-mccp-kind-config.yaml
@@ -1,7 +1,12 @@
-apiVersion: kind.x-k8s.io/v1alpha4
+# kind-config.yaml
 kind: Cluster
+apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
 - role: control-plane
+  extraMounts:
+    - hostPath: /var/run/docker.sock
+      containerPath: /var/run/docker.sock
+- role: worker
   extraPortMappings:
   - containerPort: 30080
     hostPort: 30080
