[WKP-2186] Send usage data to weaveworks checkpoint (#1983)
Used annotated context to track handler usage

--- a/charts/mccp/templates/clusters-service/configmap.yaml
+++ b/charts/mccp/templates/clusters-service/configmap.yaml
@@ -10,3 +10,7 @@ data:
   CAPI_TEMPLATES_NAMESPACE: {{ .Values.config.capi.templates.namespace }}
   CAPI_TEMPLATES_REPOSITORY_URL: {{ .Values.config.capi.repositoryURL | quote }}
   CAPI_TEMPLATES_REPOSITORY_BASE_BRANCH: {{ .Values.config.capi.baseBranch | quote }}
+  {{ if not .Values.config.checkpoint.enabled }}
+  CHECKPOINT_DISABLE: 1
+  {{ end }}
+ 
