--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -41,6 +41,8 @@ config:
       namespace: default
     repositoryURL: ''
     baseBranch: main
+  checkpoint:
+    enabled: true
 
 gitopsRepoBroker:
   gitRepo:
