--- a/cmd/capi-server/Dockerfile
+++ b/cmd/capi-server/Dockerfile
@@ -1,4 +1,4 @@
-from golang:1.16.4 as builder
+from golang:1.16.6 as builder
 
 ENV CS_PATH=cmd/capi-server
 
@@ -20,8 +20,9 @@ COPY $CS_PATH/api/ api/
 COPY $CS_PATH/app/ app/
 COPY $CS_PATH/pkg/ pkg/
 
+ARG version
 # build
-RUN CGO_ENABLED=1 go build -ldflags '-linkmode external -w -extldflags "-static"' -a -o capi-server main.go
+RUN CGO_ENABLED=1 go build -ldflags "-X 'github.com/weaveworks/wks/cmd/capi-server/pkg/version.Version=$version' -linkmode external -w -extldflags \"-static\"" -a -o capi-server main.go
 
 FROM docker.io/governmentpaas/git-ssh
 
