--- a/ui-vite/tsconfig.json
+++ b/ui-vite/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ESNext",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -13,7 +13,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "types": ["vite-plugin-svgr/client"],
+    "baseUrl": ".", // this must be specified if "paths" is specified.
+    "paths": {
+      "@weaveworks/weave-gitops": ["../../weave-gitops/ui"],
+      "react/*": ["./node_modules/react/*"]
+    }
   },
-  "include": ["./src"]
+  "include": ["./src/**/*"]
 }
