--- a/ui-vite/package.json
+++ b/ui-vite/package.json
@@ -33,7 +33,6 @@
     "@types/react-jsonschema-form": "^1.7.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
-    "@weaveworks/weave-gitops": "0.0.4",
     "d3-scale": "3.2.1",
     "git-url-parse": "11.1.2",
     "http-proxy-middleware": "^2.0.0",
@@ -43,6 +42,7 @@
     "moment": "2.25.3",
     "polished": "3.6.3",
     "prettier": "^2.3.0",
+    "query-string": "^7.0.1",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -50,6 +50,7 @@
     "react-lottie-player": "^1.3.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "react-use": "^17.1.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
@@ -59,6 +60,7 @@
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "vite": "^2.4.4",
-    "vite-plugin-svgr": "^0.4.0"
+    "vite-plugin-svgr": "^0.4.0",
+    "vite-tsconfig-paths": "^3.3.13"
   }
 }
