--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -7,9 +7,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.11.4",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/system": "^4.12.1",
     "@primer/octicons-react": "9.6.0",
     "@rjsf/core": "^2.5.1",
     "@rjsf/material-ui": "^2.5.1",
