--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -46,6 +46,7 @@
     "react-lottie-player": "^1.3.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.2",
     "react-use": "^17.1.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
