--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,11 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.16.x
+    - name: Configure git for private modules
+      env:
+        GITHUB_BUILD_USERNAME: wge-build-bot
+        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
+      run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
     - name: Checkout code
       uses: actions/checkout@v2
       with:
@@ -46,11 +51,13 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-${{ env.YARN_CACHE_NAME }}-
     - name: Build all the services
+      env:
+        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
       run: |
         if [ "$RUNNER_OS" == "macOS" ]; then
-          LOCAL_BINARIES_GOOS=darwin make cmd/mccp/mccp BUILD_IN_CONTAINER=false
+          LOCAL_BINARIES_GOOS=darwin make cmd/mccp/mccp
         elif [ "$RUNNER_OS" == "Linux" ]; then
-          make -j4 BUILD_IN_CONTAINER=false
+          make -j4 GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN}
         fi
         mv cmd/mccp/mccp cmd/mccp/mccp-${{ matrix.os }}
     - name: Store mccp binaries
@@ -107,6 +114,11 @@ jobs:
         go-version: 1.16.x
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Configure git for private modules
+      env:
+        GITHUB_BUILD_USERNAME: wge-build-bot
+        GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
+      run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
     - name: Install dependencies
       run: |
         go mod download
