--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,7 +1,4 @@
 on:
-  push:
-    branches:
-      - main
   pull_request:
   workflow_dispatch:
 
@@ -82,6 +79,7 @@ jobs:
     #     goveralls -parallel -coverprofile=.coverprofile -service="GitHub Action" -flagname wks -repotoken $WGE_COVERALLS_TOKEN
     #     (cd cmd/event-writer; goveralls -coverprofile=.coverprofile -flagname event-writer -parallel -service="GitHub Action" -repotoken $WGE_COVERALLS_TOKEN)
     #     (cd common; goveralls -coverprofile=.coverprofile -flagname common -parallel -service="GitHub Action" -repotoken $WGE_COVERALLS_TOKEN)
+    #     (cd cmd/capi-serve; goveralls -coverprofile=.coverprofile -flagname capi-server -parallel -service="GitHub Action" -repotoken $WGE_COVERALLS_TOKEN)
 
     #     # We've finished submitting the coverage
     #     curl -k "https://coveralls.io/webhook?repo_token=$WGE_COVERALLS_TOKEN" -d "payload[build_num]=$GITHUB_RUN_NUMBER&payload[status]=done"
@@ -134,13 +132,14 @@ jobs:
       uses: azure/setup-helm@v1
       with:
         version: v3.5.4
-    - name: Publish helm chart to s3
+    - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.WGE_S3_AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.WGE_S3_AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-central-1
-    - run: |
+    - name: Publish helm chart to s3
+      run: |
         TAG=$(git describe --always --match "v*")
         IMAGE_TAG=$(./tools/image-tag)
         
@@ -284,6 +283,8 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.WGE_GITHUB_TOKEN }}
       GITHUB_ORG: ${{ secrets.WGE_GITHUB_ORG }}
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
+      DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
+      DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       MCCP_BIN_PATH: ${{ github.workspace }}/cmd/mccp/mccp
       WEGO_BIN_PATH: ${{ github.workspace }}/cmd/wego/wego-linux-x86_64
       SELENIUM_DEBUG: true
@@ -366,58 +367,17 @@ jobs:
         name: management-${{ github.run_id }}-${{ github.run_number}}
         version: "v0.11.0"
         image: kindest/node:v1.20.7
-        config: "./test/utils/scripts/local-mccp-kind-config.yaml"
+        config: "./test/utils/data/local-mccp-kind-config.yaml"
     - name: Kind-check
       run: |
         kubectl get pods -A    
     - name: Install mccp componenets on management cluster
       run: |
-        set -x
-        # create unique cluster config repository name
         CLUSTER_REPOSITORY=mccp-capi-template-${{ github.run_id }}-$(openssl rand -hex 8)
-        GIT_REPOSITORY_URL="https://github.com/${{ secrets.WGE_GITHUB_ORG }}/$CLUSTER_REPOSITORY"
-
         # Set the CLUSTER_REPOSITORY as environment variable for subsequent steps
         echo "CLUSTER_REPOSITORY=$CLUSTER_REPOSITORY" >> $GITHUB_ENV
-        
-        WORKER_NODE=$(kubectl get node --selector='!node-role.kubernetes.io/master' -o name)
-        kubectl label "${WORKER_NODE}" wkp-database-volume-node=true
 
-        WORKER_NODE_EXTERNAL_IP=$(ifconfig eth0 | grep -i MASK | awk '{print $2}' | cut -f2 -d:)
-        echo "Worker node ip is ${WORKER_NODE_EXTERNAL_IP}"
-        NATS_NODEPORT=31490            
-
-        kubectl create namespace prom
-        helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-        helm repo update
-        helm install my-prom prometheus-community/kube-prometheus-stack \
-          --namespace prom \
-          --version 14.4.0 \
-          --values test/utils/data/mccp-prometheus-values.yaml
-
-        kubectl create namespace mccp
-        kubectl create secret docker-registry docker-io-pull-secret \
-          --namespace mccp \
-          --docker-username=${{ secrets.WGE_DOCKER_IO_USER }} \
-          --docker-password=${{ secrets.WGE_DOCKER_IO_PASSWORD }} 
-        kubectl create secret generic git-provider-credentials \
-          --namespace=mccp \
-          --from-literal="GIT_PROVIDER_TOKEN=${{ secrets.WGE_GITHUB_TOKEN }}"
-        CHART_VERSION=$(git describe --always | sed 's/^[^0-9]*//')
-        helm repo add wkpv3 https://s3.us-east-1.amazonaws.com/weaveworks-wkp/charts-v3/
-        helm repo update
-        helm install my-mccp wkpv3/mccp --version "${CHART_VERSION}" --namespace mccp \
-          --set "imagePullSecrets[0].name=docker-io-pull-secret" \
-          --set "wkp-ui.image.pullSecrets[0]=docker-io-pull-secret" \
-          --set "nats.client.service.nodePort=${NATS_NODEPORT}" \
-          --set "agentTemplate.natsURL=${WORKER_NODE_EXTERNAL_IP}:${NATS_NODEPORT}" \
-          --set "config.capi.repositoryURL=${GIT_REPOSITORY_URL}" \
-          --set "config.capi.baseBranch=main"
-
-        # Wait for cluster to settle
-        kubectl wait --for=condition=Ready --timeout=120s -n mccp --all pod
-        kubectl get pods -A
-
+        ./test/utils/scripts/ci-cluster-install.sh mccp $CLUSTER_REPOSITORY
         kubectl port-forward -n mccp svc/my-mccp-nginx-ingress-controller 8090:80 &
     - name: Run smoke tests
       run: |
@@ -440,6 +400,8 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.WGE_GITHUB_TOKEN }}
       GITHUB_ORG: ${{ secrets.WGE_GITHUB_ORG }}
       GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
+      DOCKER_IO_USER: ${{ secrets.WGE_DOCKER_IO_USER }} 
+      DOCKER_IO_PASSWORD: ${{ secrets.WGE_DOCKER_IO_PASSWORD }}
       MCCP_BIN_PATH: ${{ github.workspace }}/cmd/mccp/mccp
       WEGO_BIN_PATH: ${{ github.workspace }}/cmd/wego/wego-linux-x86_64
       WKP_BIN_PATH: ${{ github.workspace }}/cmd/wk/wk-v2.5.0-linux-amd64
@@ -530,94 +492,28 @@ jobs:
         name: management-${{ github.run_id }}-${{ github.run_number}}
         version: "v0.11.0"
         image: kindest/node:v1.20.7
-        config: "./test/utils/scripts/local-mccp-kind-config.yaml"
+        config: "./test/utils/data/local-mccp-kind-config.yaml"
     - name: Kind-check
       run: |
         kubectl get pods -A        
     - name: Install mccp componenets on management cluster
       run: |
-        set -x 
-        # create unique cluster config repository name
         CLUSTER_REPOSITORY=mccp-capi-template-${{ github.run_id }}-$(openssl rand -hex 8)
-        GIT_REPOSITORY_URL="https://github.com/${{ secrets.WGE_GITHUB_ORG }}/$CLUSTER_REPOSITORY"
-
         # Set the CLUSTER_REPOSITORY as environment variable for subsequent steps
         echo "CLUSTER_REPOSITORY=$CLUSTER_REPOSITORY" >> $GITHUB_ENV
-        
-        WORKER_NODE=$(kubectl get node --selector='!node-role.kubernetes.io/master' -o name)
-        kubectl label "${WORKER_NODE}" wkp-database-volume-node=true
 
-        WORKER_NODE_EXTERNAL_IP=$(ifconfig eth0 | grep -i MASK | awk '{print $2}' | cut -f2 -d:)
-        echo "Worker node ip is ${WORKER_NODE_EXTERNAL_IP}"
-        NATS_NODEPORT=31490            
-
-        kubectl create namespace prom
-        helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-        helm repo update
-        helm install my-prom prometheus-community/kube-prometheus-stack \
-          --namespace prom \
-          --version 14.4.0 \
-          --values test/utils/data/mccp-prometheus-values.yaml
-
-        kubectl create namespace mccp
-        kubectl create secret docker-registry docker-io-pull-secret \
-          --namespace mccp \
-          --docker-username=${{ secrets.WGE_DOCKER_IO_USER }} \
-          --docker-password=${{ secrets.WGE_DOCKER_IO_PASSWORD }} 
-        kubectl create secret generic git-provider-credentials \
-          --namespace=mccp \
-          --from-literal="GIT_PROVIDER_TOKEN=${{ secrets.WGE_GITHUB_TOKEN }}"
-        CHART_VERSION=$(git describe --always | sed 's/^[^0-9]*//')
-        helm repo add wkpv3 https://s3.us-east-1.amazonaws.com/weaveworks-wkp/charts-v3/
-        helm repo update
-        helm install my-mccp wkpv3/mccp --version "${CHART_VERSION}" --namespace mccp \
-          --set "imagePullSecrets[0].name=docker-io-pull-secret" \
-          --set "wkp-ui.image.pullSecrets[0]=docker-io-pull-secret" \
-          --set "nats.client.service.nodePort=${NATS_NODEPORT}" \
-          --set "agentTemplate.natsURL=${WORKER_NODE_EXTERNAL_IP}:${NATS_NODEPORT}" \
-          --set "config.capi.repositoryURL=${GIT_REPOSITORY_URL}" \
-          --set "config.capi.baseBranch=main"
-
-        # Wait for cluster to settle
-        kubectl wait --for=condition=Ready --timeout=120s -n mccp --all pod
-        kubectl get pods -A
-
+        ./test/utils/scripts/ci-cluster-install.sh mccp $CLUSTER_REPOSITORY
         kubectl port-forward -n mccp svc/my-mccp-nginx-ingress-controller 8090:80 &
     - name: Setup wkp leaf cluster
       run: |
         kind create cluster --name my-wkp-leaf-cluster --image=kindest/node:v1.20.7 --config test/utils/data/kind-config.yaml --kubeconfig $MCCP_KIND_WKP_LEAF_KUBECONFIG
         export KUBECONFIG=$MCCP_KIND_WKP_LEAF_KUBECONFIG
 
-        export SKIP_PROMPT=1
         export CLUSTER_NAME=leaf-${{ github.run_id }}-${{ github.run_number}}
         # Set the WKP_CLUSTER_NAME as environment variable for subsequent steps
         echo "WKP_CLUSTER_NAME=$CLUSTER_NAME" >> $GITHUB_ENV
-        
-        wkp_kind_cluster_dir=$(mktemp -d)
-        cd $wkp_kind_cluster_dir
-        $WKP_BIN_PATH setup install --entitlements=${{ github.workspace }}/test/ci-wks-unlimited.entitlements
-        echo "${{ secrets.WGE_DOCKER_IO_PASSWORD }}" > /tmp/docker-io-password
-        sed -i "s/track:.*/track: wks-components/" $wkp_kind_cluster_dir/setup/config.yaml
-        sed -i "s/clusterName:.*/clusterName: $CLUSTER_NAME/" $wkp_kind_cluster_dir/setup/config.yaml
-        sed -i "s/gitProvider:.*/gitProvider: github/" $wkp_kind_cluster_dir/setup/config.yaml
-        sed -i "s/gitProviderOrg:.*/gitProviderOrg: ${{ secrets.WGE_GITHUB_ORG }}/" $wkp_kind_cluster_dir/setup/config.yaml
-        sed -i "s/dockerIOUser:.*/dockerIOUser: ${{ secrets.WGE_DOCKER_IO_USER }}/" $wkp_kind_cluster_dir/setup/config.yaml 
-        sed -i "s|dockerIOPasswordFile:.*|dockerIOPasswordFile: /tmp/docker-io-password|" $wkp_kind_cluster_dir/setup/config.yaml 
-        # don't skip the components we need those
-        export SKIP_COMPONENTS=false
-        $WKP_BIN_PATH setup run --entitlements=${{ github.workspace }}/test/ci-wks-unlimited.entitlements
-        # Wait until pods are running
-        kubectl wait nodes --all --for=condition=ready --timeout=120s || true
-        kubectl wait pods -n kube-system -l tier=control-plane --for=condition=ready --timeout=120s || true
-        kubectl wait deployment.apps/coredns -n kube-system --for=condition=available --timeout=120s || true
-        kubectl get pods -A
-        kubectl get nodes
-        $WKP_BIN_PATH workspaces add-provider \
-            --type github \
-            --token "${{ secrets.WGE_GITHUB_TOKEN }}" \
-            --secret-name github-token \
-            --git-commit-push \
-            --entitlements=${{ github.workspace }}/test/ci-wks-unlimited.entitlements
+        ./test/utils/scripts/ci-cluster-install.sh wkp $CLUSTER_NAME ${{ github.workspace }}
+
         # Unset KUBECONFIG to let kubectl point back to the MCCP cluster under test
         unset KUBECONFIG        
     - name: Run acceptance tests
